# activecpp-ESP32-EOC25

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.devcontainer/: devcontainer.json
components/activecpp/: CMakeLists.txt
components/nlohmann_json/: CMakeLists.txt
containers/dev/: Dockerfile
main/: CMakeLists.txt  Kconfig.projbuild  app.cpp  app.h  blufi.cpp  blufi.h  board.cpp  board.h  common.h  http_handlers.cpp  http_handlers.h  idf_component.yml  main.cpp  utils.cpp  utils.h
main/www/: index.html
profiles/: dev
scripts/: build_firmware.sh  build_www.sh  flash_firmware.sh  flash_script.sh  monitor_serial.sh  prepare_environment.sh  run_clang_tidy.sh
